--- a/pages/auth/logIn.html
+++ b/pages/auth/logIn.html
@@ -9,7 +9,7 @@
       rel="icon"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="../../assets/css/style.css" />
+    <link rel="stylesheet" href="../../assets/css/logIn_register_index.css" />
   </head>
   <body class="signInBody">
     <div class="signInContainer">
@@ -33,4 +33,4 @@
   </body>
 </html>
 <!-- Tai khoan admin: Admin123@gmail.com
- mat khau: admin666899 -->
+        mat khau: admin666899 -->
