--- a/pages/auth/register.html
+++ b/pages/auth/register.html
@@ -9,7 +9,7 @@
       rel="icon"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="../../assets/css/style.css" />
+    <link rel="stylesheet" href="../../assets/css/logIn_register_index.css" />
   </head>
   <body class="signUpBody">
     <div class="signUpContainer">
