--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       rel="icon"
       type="image/x-icon"
     />
+    <link rel="stylesheet" href="./pages/booking/schedule.html" />
     <link rel="stylesheet" href="./assets/css/logIn_register_index.css" />
   </head>
   <body>
@@ -18,6 +19,7 @@
         <a class="right" href="./index.html">Trang chủ</a>
         <a class="right" href="./pages/booking/schedule.html">Lịch tập</a>
         <a class="right" href="./pages/auth/logIn.html">Đăng nhập</a>
+        <a class="right" id="logOut" style="display: none">Đăng xuất</a>
       </div>
     </div>
     <div class="body">
