--- a/pages/booking/schedule.html
+++ b/pages/booking/schedule.html
@@ -10,11 +10,11 @@
     rel="icon"
     type="image/x-icon"
   />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../../assets/css/booking.css" />
   <body>
     <div class="navbar">
       <div class="navbar_contents">
-        <div class="name">GYM MANAGEMENT</div>
+        <a href="./schedule.html" class="name">GYM MANAGEMENT</a>
         <div class="navLinks">
           <a href="../../index.html">Trang chủ</a>
           <a href="./schedule.html">Lịch tập</a>
@@ -22,20 +22,22 @@
       </div>
     </div>
     <div class="body">
-      <div class="upper">
-        <div class="bigOne">Quản lý lịch tập</div>
-        <button>Đặt lịch mới</button>
+      <div class="body_container">
+        <div class="upper">
+          <div class="bigOne">Quản lý lịch tập</div>
+          <button class="new_schedule">Đặt lịch mới</button>
+        </div>
+        <table>
+          <tr>
+            <th>Lớp học</th>
+            <th>Ngày tập</th>
+            <th>Khung giờ</th>
+            <th>Họ tên</th>
+            <th>Email</th>
+            <th>Thao tác</th>
+          </tr>
+        </table>
       </div>
-      <table>
-        <tr>
-          <th>Lớp học</th>
-          <th>Ngày tập</th>
-          <th>Khung giờ</th>
-          <th>Họ tên</th>
-          <th>Email</th>
-          <th>Thao tác</th>
-        </tr>
-      </table>
     </div>
   </body>
 </html>
