--- a/pages/auth/logIn.html
+++ b/pages/auth/logIn.html
@@ -4,11 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Đăng nhập</title>
-    <link
-      href="../../public/favicon/login_register.ico"
-      rel="icon"
-      type="image/x-icon"
-    />
     <link rel="stylesheet" href="../../assets/css/logIn_register_index.css" />
   </head>
   <body class="signInBody">
@@ -32,5 +27,6 @@
     <script src="../../assets/js/auth.js"></script>
   </body>
 </html>
-<!-- Tai khoan admin: Admin123@gmail.com
-        mat khau: admin666899 -->
+<!-- Tai khoan admin 
+ admin123@gmail.com
+ pass: admin6668899 -->
