--- a/pages/booking/schedule.html
+++ b/pages/booking/schedule.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Đặt lịch</title>
   </head>
   <link
-    href="./public/favicon/home_booking.ico"
+    href="../../public/favicon/home_booking.ico"
     rel="icon"
     type="image/x-icon"
   />
@@ -48,10 +48,8 @@
           <option value="Yoga">Yoga</option>
           <option value="Zumba">Zumba</option>
         </select>
-
         <label>Ngày tập:</label>
         <input type="date" id="dateInput" />
-
         <label>Khung giờ:</label>
         <select id="timeSelect">
           <option value="">Chọn khung giờ</option>
